# gcp_nwave

./: ReadMe.md  act_vis.py  codebook.npy  compute_act_convolve.py  compute_act_laplacian.py  compute_act_laplacian_new.py  compute_act_msg_passing.py  compute_activations.py  compute_laplacian_new_withinh.py  compute_laplacian_withinh.py  compute_whole_activ.py  computeact_convolve.py  computeact_laplacian.py  computeact_msg_passing.py  configs.py  dataloader.py  experiment.py  matrix.c  matrix.py  matrix_compute.py  nohup.out  parallel algorithm.py  parameter.csv  test.py  test1.py  test_convolve.py  test_train_cupy.py  test_train_laplacian.py  test_train_laplacian_new.py  test_train_numpy.py  train_convolve.py  train_laplacian.py  train_msg_passing.py  visualization.py  word_activations.ipynb
FPGA_version/: .actsim_history  .gitignore  compile.sh  example.act  exc_act.csv  logfile  logfile1  logfile2  nn4.act  nn7.act  nn7_modify.act  x.act  (+8 more)
c_version/: CMakeLists.txt  Matrix  Para  Phi.csv  RC.csv  Read  a.out  codebook.csv  comput_act_laplacian_new.c  compute_RC.c  compute_act.c  compute_act_msg_passing.c  decode_msg_passing.c  exc_act.csv  exc_act0.csv  exc_act_new.csv  exc_act_python.csv  fxp_test.c  makefile  matrix_float.c  matrix_test.c  msg_passing_algorithm.c  np_to_csv.ipynb  plot_RC.ipynb  plot_RCipynb.ipynb  read_csv.c  read_param.c  stimulus.csv  test.c  test_between_C_and_python.ipynb  threshold_test.c  train_laplacian.c  train_msg_passing.c  train_new.c
c_version/Matrix.dSYM/Contents/: Info.plist
c_version/Matrix.dSYM/Contents/Resources/DWARF/: Matrix
(+13 files in other folders)
